@@ -43,7 +43,7 @@ export RUNTIME_DIR
 export ARCHIVE_DIR
 export ARCHIVEREPORTS_DIR
 
-LOAD_PROGRAM="OMIM.py OMIMtermcheck.py ${LOAD_PROGRAM}"
+LOAD_PROGRAM="OMIM.py OMIMpost.sh ${LOAD_PROGRAM}"
 export LOAD_PROGRAM
 
 case `uname -n` in
@@ -121,7 +121,7 @@ cd `dirname $0`
 # copies qc files to archive and re-sets for the next report
 # see TR9461 (OMIMtermcheck report)
 #
-mkdir -p ${ARCHIVEREPORTS_DIR}
-mv -f ${RUNTIME_DIR}/OMIMtermcheck.*.rpt ${ARCHIVEREPORTS_DIR}
-rm -rf ${RUNTIME_DIR}/OMIMtermcheck.*.current.rpt
+#mkdir -p ${ARCHIVEREPORTS_DIR}
+#mv -f ${RUNTIME_DIR}/OMIMtermcheck.*.rpt ${ARCHIVEREPORTS_DIR}
+#rm -rf ${RUNTIME_DIR}/OMIMtermcheck.*.current.rpt
 
