@@ -1,3 +1,9 @@
+TAG: vocload-6-0-16-5
+DATE: 09/28/2020
+STAFF: lec
+CHANGES: 
+added OMIMpost.sh/call OMIMtermcheck.py to OMIMpost.sh
+
 TAG: vocload-6-0-16-4
 DATE: 09/23/2020
 STAFF: lec
